prevented scrolling on mobile

--- a/style.css
+++ b/style.css
@@ -11,7 +11,9 @@ body {
     margin: 0;
     font-family: 'Gill Sans', 'Gill Sans MT', Calibri, 'Trebuchet MS', sans-serif;
     font-size: 40px;
+    overflow: hidden; /*to prevent scrolling*/
 }
+
 input {
     font-size: 40px;
 }
